--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.7.4",
     "@tailwindcss/vite": "^4.1.13",
     "@tiptap/extension-highlight": "^3.6.2",
     "@tiptap/extension-link": "^3.6.2",
     "@tiptap/extension-placeholder": "^3.6.2",
     "@tiptap/extension-text-align": "^3.6.2",
     "@tiptap/extension-underline": "^3.6.2",
-    "@tiptap/react": "^3.6.2",
+    "@tiptap/pm": "^3.6.2",
     "@tiptap/starter-kit": "^3.6.2",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
